--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <body>
   <main>
     <article class="center-block">
-      <button id="newGame">New game</button>
+      <button id="new-game-dialog">New game</button>
     </article>
     <article class="game-board">
+      <div id="game-over-panel">
+        <p>
+          Game over
+        </p>
+        <button id="new-game-dialog">Start a new game</button>
+      </div>
       <div>
         <div class="game-cell"><div></div></div>
         <div class="game-cell"><div></div></div>
