--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>
           Game over
         </p>
-        <button id="new-game-button">Start a new game</button>
+        <button id="new-game-dialog-button">Start a new game</button>
       </div>
       <div class="game-row">
         <div class="game-cell"><div></div></div>
